--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
